# fatzke

./: .gitignore  CMakeLists.txt  README.md  cmakelists.txt  directions_atlas.tga  fatzke  main  main.c  map.tga  map_atlas.tga  players.tga  run  run.cmd  runtcc  scale.c  units.tga  units_atlas.tga  wayland.c  wayland.h
battle/: battle.c  build.cmd  compile_and_run.cmd  compile_release.cmd  compile_shaders.cmd  compress_textures.cmd  depr.  header.h  linux.c  main  main.c  platform.h  run.cmd  shaders.slang  shaders.spv  triA.frag  triA.vert.spv  triB.vert.spv  vt.c  vulkan.c  vulkan.inc  wayland.c  wayland.deprecated  wayland.inc  windows.c  windows.inc
battle/data/: compress_textures.cmd
battle/static/: compile_shaders.cmd  compile_textures.cmd  font_atlas.h  shaders.h
config/: CMakeLists.txt  Cargo.toml
config/network/: Cargo.toml
config/udp/: Cargo.toml
fatzke/: fatzke  icon.h  main.c  run.cmd  scale.c  upscale.inc
fatzke/data/: directions_atlas.tga  map_atlas.tga
fz/: main.c  shaders.wgsl  triA.vert  triB.frag  triB.vert  usinggl.c
gl/: main.c
header/: header.c  header.inc
network/: lib.rs
palette/: encode.c  font_atlas.tga  palette.inc
py/: render.py
tcc/: run
thread/: thread.inc
udp/: main.rs
vk/: compile_and_run.cmd  compile_shaders.cmd  compile_textures.cmd  convert.c  header.h  helper.h  main  main.c  map.h  map.py  mesh.h  plane_instances.h  plane_lod0.h  plane_lod1.h  plane_lod2.h  plane_lod3.h  plane_lod4.h  plane_lod5.h  plane_lod6.h  shaders.slang  texture.h  vk_machine.h  vk_swapchain.h  vk_util.h  wayland.c  win32.c  x11.c
vk/data/: convert.c  lod.mesh
vk/shaders/: instance.comp.glsl  meshlet.comp.glsl  prepare.comp.glsl  tri.frag.glsl  tri.vert.glsl
vk/static/: cs_instance.spv  cs_meshlet.spv  cs_prepare.spv  shaders.spv  tri.frag.spv  tri.vert.spv
vk_tools/: map.py
wayland/: wayland.c  wayland.inc
webgpu/: compile_and_run.cmd  header.h  main.c  shaders.wgsl
windows/: pthread.h  win32.inc  windows.c
